<resources>
    <string name="app_name">GlukDataApp</string>
    <string name="name_of_values">Name of Values</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="time_format">HH:mm</string>
    <string name="value_format">00.0</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="header_text">Saves time and blood pressure</string>
    <string name="contact_info">meraon@gmail.com</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="delete_entry">Delete entry</string>
    <string name="insulin_value_format">#</string>
    <string name="glucose_value_format">#.0</string>

    <string name="pref_multicast_ip_key">udp_multicast_ip</string>
    <string name="pref_multicast_ip">Multicast IP</string>
    <string name="pref_multicast_ip_summary">multicast ip on which server listens for clients</string>
    <string name="pref_multicast_ip_default_value">239.0.0.0</string>
    <string name="pref_multicast_port_key">udp_port</string>
    <string name="pref_multicast_port">Multicast Port</string>
    <string name="pref_multicast_port_summary">multicast port on which server listens for clients</string>
    <string name="pref_multicast_port_default_value">11223</string>
    <string name="pref_delete_after_upload_key">delete_after_upload</string>
    <string name="pref_delete_after_upload">Delete saved data after upload</string>
    <string name="pref_delete_after_upload_default_value">false</string>

</resources>
